@@ -21,20 +21,3 @@ Date: Tue, 2 Mar 1999 09:44:33 +0000
 
 content
 
-From CALLER@myhost.test.ex Tue Mar 02 09:44:33 1999
-Received: from the.local.host.name ([ip4.ip4.ip4.ip4] helo=myhost.test.ex)
-	by myhost.test.ex with esmtp (Exim x.yz)
-	(envelope-from <CALLER@myhost.test.ex>)
-	id 10HmbM-0005vi-00
-	for a@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
-Received: from CALLER by myhost.test.ex with local (Exim x.yz)
-	(envelope-from <CALLER@myhost.test.ex>)
-	id 10HmbL-0005vi-00
-	for a@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
-From: nobody@example.com
-Message-Id: <E10HmbL-0005vi-00@myhost.test.ex>
-Sender: CALLER_NAME <CALLER@myhost.test.ex>
-Date: Tue, 2 Mar 1999 09:44:33 +0000
-
-content
-
