@@ -37,6 +37,8 @@ JH/09 Bug 2274: Fix logging of cmdline args when starting in an unlinked cwd.
 JH/10 Fix ARC signing for case when DKIM signing failed.  Previously this would
       segfault.
 
+JH/14 Bug 2284: Fix DKIM signing for body lines starting with a pair of dots.
+
 
 Exim version 4.91
 -----------------
